--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   margin: 0;
   padding: 0;
-  background-color: #f5f5f5;
+  background-color: #222; /* Dark background color */
   display: flex;
   justify-content: center;
   align-items: center;
@@ -10,7 +10,7 @@ body {
 }
 
 .crypto-app {
-  background-color: #fff;
+  background-color: #333; /* Dark background color */
   border-radius: 10px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   padding: 20px;
@@ -20,74 +20,5 @@ body {
 h1 {
   font-size: 36px;
   margin-bottom: 20px;
-  color: #333;
+  color: #eee; /* Light text color */
 }
-
-.balance, .percentage-change {
-  font-size: 18px;
-  margin: 10px 0;
-  color: #555;
-}
-
-.percentage-change {
-  font-size: 18px;
-  margin: 10px 0;
-  color: #555;
-}
-
-.positive {
-  color: #4caf50; /* Green color for positive change */
-}
-
-.negative {
-  color: #e44d26; /* Red color for negative change */
-}
-
-button {
-  background-color: #3498db;
-  color: #fff;
-  border: none;
-  padding: 10px 20px;
-  font-size: 16px;
-  border-radius: 5px;
-  cursor: pointer;
-  transition: background-color 0.3s;
-}
-
-button:hover {
-  background-color: #2980b9;
-}
-
-.alert {
-  background-color: #e44d26;
-  color: #fff;
-  padding: 10px;
-  border-radius: 5px;
-  margin-top: 10px;
-}
-
-.chain-data-row {
-  background-color: #ffffff;
-  border-radius: 8px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding: 15px;
-  margin-bottom: 15px;
-  transition: box-shadow 0.3s ease;
-
-  &:hover {
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-  }
-}
-
-.balance-info {
-  font-size: 16px;
-  margin: 0;
-  color: #333333;
-}
-
-.chain-name {
-  font-weight: bold;
-  color: #3498db;
-  margin-right: 10px;
-}
-
